LayoutTests/imported/w3c: SVG SMIL restart="never" does not behave correctly https://bugs.webkit.org/show_bug.cgi?id=236491

Reviewed by Antti Koivisto.

Add a new test that checks whether restart="never" is respected when
begin="click" is set on an SVG <animate> element.

* web-platform-tests/svg/animations/restart-never-and-begin-click-expected.txt: Added.
* web-platform-tests/svg/animations/restart-never-and-begin-click.html: Added.

Source/WebCore:
[LBSE] Apply SVG specific changes to RenderLayer painting
https://bugs.webkit.org/show_bug.cgi?id=236191

Patch by Nikolas Zimmermann <nzimmermann@igalia.com> on 2022-02-17
Reviewed by Rob Buis.

This patch summarizes three small SVG specific changes regarding painting, not justifying
more atomic patches, since it's the same context of changes: painting + SVG layer.

1. SVG container repainting
Layers associated with SVG container elements (<g> / <defs> (!)) should never trigger repaints,
unless they are filtered. Adapt RenderLayer::shouldRepaintAfterLayout() to enforce this.

2. SVG viewport clipping
Assure that RenderSVGRoot viewport clipping is applied _before_ the SVG viewBox transformation
is applied (soon to be handled by RenderLayer for SVG).

3. SVG clip-path handling
Add a stub implementation of RenderLayer::computeClipPath(). There are more important parts
to upstream, before adding clipping support for SVG - however this stub serves as reminder
for upcoming patches -- this strategy works well so far.

Covered by existing tests, no change in behaviour.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::shouldRepaintAfterLayout const):
(WebCore::RenderLayer::paintLayerWithEffects):
(WebCore::RenderLayer::computeClipPath const):


Canonical link: https://commits.webkit.org/247396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290010 268f45cc-cd09-0410-ab3c-d52691b4dbfc